--- a/iina_custom.conf
+++ b/iina_custom.conf
@@ -74,6 +74,8 @@ FORWARD seek 60
 REWIND seek -60
 NEXT playlist-next
 PREV playlist-prev
+* playlist-next
+/ playlist-prev
 VOLUME_UP add volume 2
 VOLUME_DOWN add volume -2
 MUTE cycle mute
